[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "singularity-grid"
version = "0.4.0"
description = "Python SDK for the SGL Network confidential compute grid (end-to-end encrypted + streaming)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Singularity Layer", email = "dev@singularitylayer.xyz" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
    "pynacl>=1.5",
    "cryptography>=42.0",
    "base58>=2.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.urls]
Homepage = "https://singularitylayer.xyz"
Repository = "https://github.com/SingularityLayer/sgl-network-sdk"
Documentation = "https://docs.singularitylayer.xyz/sdk"
